--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-hook-form": "^7.57.0",
         "react-hot-toast": "^2.5.2",
         "tailwind-merge": "^3.3.0",
+        "tailwind-variants": "^1.0.0",
         "zod": "^3.25.49"
     },
     "devDependencies": {
